k3s/photoprism/common.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: photoprism
