k3s/photoprism/mariadb.yml
---
apiVersion: v1
kind: Service
metadata:
  name: mariadb-photoprism
  namespace: photoprism
spec:
  clusterIP: None # Headless service for StatefulSet
  ports:
    - port: 3306
      targetPort: 3306
  selector:
    app: mariadb-photoprism
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mariadb-photoprism
  namespace: photoprism
spec:
  serviceName: mariadb-photoprism
  replicas: 1
  selector:
    matchLabels:
      app: mariadb-photoprism
  template:
    metadata:
      labels:
        app: mariadb-photoprism
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - k3s-node1
      securityContext:
        seccompProfile:
          type: Unconfined
      containers:
        - name: mariadb-photoprism
          image: mariadb:11
          args:
            - "--innodb-buffer-pool-size=512M"
            - "--transaction-isolation=READ-COMMITTED"
            - "--character-set-server=utf8mb4"
            - "--collation-server=utf8mb4_unicode_ci"
            - "--max-connections=512"
            - "--innodb-rollback-on-timeout=OFF"
            - "--innodb-lock-wait-timeout=120"
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mariadb-data
              mountPath: /var/lib/mysql
          # securityContext:
          #   allowPrivilegeEscalation: false
          #   capabilities:
          #     drop:
          #       - ALL
          #   seccompProfile:
          #     type: Unconfined
      volumes:
        - name: mariadb-data
          persistentVolumeClaim:
            claimName: mariadb-photoprism
