k3s/photoprism/network.yml
---
apiVersion: v1
kind: Service
metadata:
  name: photoprism
  namespace: photoprism
  labels:
    app: photoprism
spec:
  selector:
    app: photoprism
  ports:
    - protocol: TCP
      port: 2342
      targetPort: 2342
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: photoprism-ingress-http
  namespace: photoprism
  labels:
    app: photoprism
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.tls: "false"
spec:
  rules:
    - host: foto.lukcic.pl
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: photoprism
                port:
                  number: 2342
